Fix resizing on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -123,15 +123,37 @@ footer {
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 800px) {
     header {
         .icon {
             position: fixed;
             right: 0;
             padding: 0 20px;
         }
+        .icon {
+            display: block !important;
+        }
         nav {
             display: none;
+        }
+    }
+
+    main {
+        section {
+            display: flex;
+            justify-content: center;
+
+            .games {
+                img {
+                    width: 40vw;
+                }
+            }
+        }
+    }
+
+    footer {
+        .socials {
+            width: 80vw;
         }
     }
 }
